--- a/electron/package.json
+++ b/electron/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "electron",
+  "name": "pentest-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
